--- a/00_PyTorch_Fundamentals.ipynb
+++ b/00_PyTorch_Fundamentals.ipynb
@@ -1408,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -1417,7 +1417,7 @@
        "(tensor([1., 2., 3., 4., 5., 6., 7., 8., 9.]), torch.Size([9]))"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1439,23 +1439,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([[1., 2., 3., 4., 5., 6., 7., 8., 9.]]), torch.Size([1, 9]))"
+       "(tensor([[1., 2., 3.],\n",
+       "         [4., 5., 6.],\n",
+       "         [7., 8., 9.]]),\n",
+       " torch.Size([3, 3]))"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Add an extra dimension\n",
-    "x_reshaped = x.reshape(1, 9)\n",
+    "#  모양 변경 (3 x 3) : 기존의 원소 size가 9이기 때문에 3x3 텐서로 변경\n",
+    "x_reshaped = x.reshape(3, 3) # 1차원 텐서를 3x3 텐서로 변경\n",
     "x_reshaped, x_reshaped.shape"
    ]
   },
@@ -1659,22 +1663,250 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(0.5211)"
+       "(tensor(728218.), tensor(728218.))"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x_original[0,0,0]"
+    "x_original[0,0,0] = 728218\n",
+    "x_original[0,0,0], x_permuted[0,0,0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Indexing (selecting data from tensors)\n",
+    "\n",
+    "Indexing with Pyutorch is similar to indexing with NumPy."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[[1, 2, 3],\n",
+       "          [4, 5, 6],\n",
+       "          [7, 8, 9]]]),\n",
+       " torch.Size([1, 3, 3]))"
+      ]
+     },
+     "execution_count": 229,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a tensor\n",
+    "import torch\n",
+    "\n",
+    "x= torch.arange(1, 10).reshape(1,3,3)\n",
+    "x, x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1, 2, 3],\n",
+       "        [4, 5, 6],\n",
+       "        [7, 8, 9]])"
+      ]
+     },
+     "execution_count": 230,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Indexing on a new tensor\n",
+    "x[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1, 2, 3])"
+      ]
+     },
+     "execution_count": 231,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# indexing on the middle braket (dim=1)\n",
+    "x[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(9)"
+      ]
+     },
+     "execution_count": 233,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# indexing on the most inner braket (dim=2, last dimension)\n",
+    "x[0][2][2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1, 2, 3]])"
+      ]
+     },
+     "execution_count": 235,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# You can also use \":\" to select \"all\" of a target dimension\n",
+    "x[:,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[2, 5, 8]])"
+      ]
+     },
+     "execution_count": 244,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get all values of 0th and 1st dimensions but only inde 1 of 2nd dimension\n",
+    "x[:,:,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([8])"
+      ]
+     },
+     "execution_count": 239,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get all values of the 0 dimension but only the 1 index value of 1st and 2nd dimension\n",
+    "x[:, 2, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1, 2, 3])"
+      ]
+     },
+     "execution_count": 247,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get index 0 of 0th and 1st dimension and all values of 2nd dimension\n",
+    "x[0,0,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(9)"
+      ]
+     },
+     "execution_count": 249,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#INDEX ON X TO RETURN 9\n",
+    "x[0, 2, 2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 251,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([3, 6, 9])"
+      ]
+     },
+     "execution_count": 251,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Index on x to return 3, 6, 9\n",
+    "x[ 0, :, 2]"
    ]
   },
   {
