--- a/00_PyTorch_Fundamentals.ipynb
+++ b/00_PyTorch_Fundamentals.ipynb
@@ -1688,7 +1688,10 @@
    "source": [
     "## Indexing (selecting data from tensors)\n",
     "\n",
-    "Indexing with Pyutorch is similar to indexing with NumPy."
+    "Indexing with Pyutorch is similar to indexing with NumPy.\n",
+    "\n",
+    "텐서 인덱싱은 텐서에서 특정 요소나 데이터 범위를 선택하고 조작하는 방법. 다차원 데이터를 처리할 때 필수적인 기술이며, 데이터를 효과적으로 선택하고 활용할 수 있도록 돕는다.\n",
+    "PyTorch의 텐서 인덱싱은 **NumPy 인덱싱**과 매우 유사하다. "
    ]
   },
   {
@@ -1714,7 +1717,7 @@
     "# Create a tensor\n",
     "import torch\n",
     "\n",
-    "x= torch.arange(1, 10).reshape(1,3,3)\n",
+    "x= torch.arange(1, 10).reshape(1,3,3) # 텐서 1개, 각 텐서에 3개의 행(row), 각 행에 3개의 요소\n",
     "x, x.shape"
    ]
   },
@@ -1907,6 +1910,231 @@
    "source": [
     "# Index on x to return 3, 6, 9\n",
     "x[ 0, :, 2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1, 2, 3],\n",
+       "        [4, 5, 6]])"
+      ]
+     },
+     "execution_count": 262,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[0, :2, :]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pytorch tensors & Numpy\n",
+    "\n",
+    "Numpy is a popular scientific python numerical computing library.\n",
+    "Numpy는 인기 있는 과학적 파이썬 수치 계산 라이브러리입니다.\n",
+    "\n",
+    "And because of this, PyTorch has functionality to interact with it.\n",
+    "이 때문에 PyTorch는 이와 상호작용할 수 있는 기능을 갖추고 있습니다.\n",
+    "\n",
+    "* Numpy에서 원하는 데이터는 PyTorch 텐서 -> `torch.from_numpy(ndarray)`\n",
+    "* Pytorch tensor -> Numpy -> `torch.Tensor.numpy()`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 263,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([1., 2., 3., 4., 5., 6., 7.]), array([1., 2., 3., 4., 5., 6., 7.]))"
+      ]
+     },
+     "execution_count": 263,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Numpy array to tensor\n",
+    "import torch\n",
+    "import numpy as np\n",
+    "\n",
+    "array = np.arange(1.0, 8.0)\n",
+    "\n",
+    "# warning : when converting from numpy => pytorch, pytorch reflects numpy's default datatype of float64 unless specified otherwise\n",
+    "tensor = torch.from_numpy(array).type(torch.float32) \n",
+    "tensor, array\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 264,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([2., 3., 4., 5., 6., 7., 8.]), tensor([1., 2., 3., 4., 5., 6., 7.]))"
+      ]
+     },
+     "execution_count": 264,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Change the value of array, what will this do to `tensor`?\n",
+    "array = array +1\n",
+    "array, tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 260,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([1., 1., 1., 1., 1., 1., 1.]),\n",
+       " array([1., 1., 1., 1., 1., 1., 1.], dtype=float32))"
+      ]
+     },
+     "execution_count": 260,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Tensor to Numpy array\n",
+    "tensor = torch.ones(7)\n",
+    "numpy_tensor = tensor.numpy()\n",
+    "tensor, numpy_tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 261,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([2., 2., 2., 2., 2., 2., 2.]),\n",
+       " array([1., 1., 1., 1., 1., 1., 1.], dtype=float32))"
+      ]
+     },
+     "execution_count": 261,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Change the tensor, what happens to `numpy_tensor`?\n",
+    "tensor = tensor + 1\n",
+    "tensor, numpy_tensor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reproducibility(trying to take  random out of random)\n",
+    "\n",
+    "간단히 말해서, 신경망이 학습하는 방법:\n",
+    "`랜덤숫자 부터 시작 -> tensor 연산 수행 -> 데이터의 더 나은 표현 시도를 위한 랜덤 숫자 업데이트 -> 더 나은 랜덤 숫자 업데이트 -> 더 나은 랜덤 숫자 업데이트 -> ...`\n",
+    "\n",
+    "신경망의 무작위성을 줄이기 위해 그리고 파이토치는 **random seed**를 사용한다.\n",
+    "\n",
+    "본질적으로 random seed는 'flavour' 또는 '무작위성의 종류'를 선택하는 것이다.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 270,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Tensor A: tensor([[0.1111, 0.9924, 0.9194, 0.6346],\n",
+      "        [0.2892, 0.5009, 0.1227, 0.7370],\n",
+      "        [0.0058, 0.2892, 0.4888, 0.6135]])\n",
+      "\n",
+      "Random Tensor B: tensor([[0.3066, 0.6167, 0.3277, 0.0691],\n",
+      "        [0.8476, 0.1233, 0.5768, 0.7205],\n",
+      "        [0.6543, 0.2961, 0.2810, 0.5401]])\n",
+      "\n",
+      "Random Tensor A == Random Tensor B: \n",
+      "tensor([[False, False, False, False],\n",
+      "        [False, False, False, False],\n",
+      "        [False, False, False, False]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "# Create two random tensors\n",
+    "random_tensor_A = torch.rand(3, 4)\n",
+    "random_tensor_B = torch.rand(3, 4)\n",
+    "\n",
+    "print(f\"Random Tensor A: {random_tensor_A}\")\n",
+    "print(f\"\\nRandom Tensor B: {random_tensor_B}\")\n",
+    "print(f\"\\nRandom Tensor A == Random Tensor B: \\n{random_tensor_A == random_tensor_B}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 276,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Tensor C: tensor([[0.8823, 0.9150, 0.3829, 0.9593],\n",
+      "        [0.3904, 0.6009, 0.2566, 0.7936],\n",
+      "        [0.9408, 0.1332, 0.9346, 0.5936]])\n",
+      "Random Tensor D: tensor([[0.8823, 0.9150, 0.3829, 0.9593],\n",
+      "        [0.3904, 0.6009, 0.2566, 0.7936],\n",
+      "        [0.9408, 0.1332, 0.9346, 0.5936]])\n",
+      "\n",
+      "Random Tensor C == Random Tensor D: \n",
+      "tensor([[True, True, True, True],\n",
+      "        [True, True, True, True],\n",
+      "        [True, True, True, True]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Making some random but reproducible tensors\n",
+    "import torch\n",
+    "# Set the random seed\n",
+    "RANDOM_SEED = 42\n",
+    "torch.manual_seed(RANDOM_SEED)\n",
+    "random_tensor_C = torch.rand(3, 4)\n",
+    "\n",
+    "torch.manual_seed(RANDOM_SEED)\n",
+    "random_tensor_D = torch.rand(3, 4)\n",
+    "\n",
+    "print(f\"Random Tensor C: {random_tensor_C}\")\n",
+    "print(f\"Random Tensor D: {random_tensor_D}\")\n",
+    "\n",
+    "print(f\"\\nRandom Tensor C == Random Tensor D: \\n{random_tensor_C == random_tensor_D}\")\n",
+    "\n"
    ]
   },
   {
