Different Ways of Accessing a GPU in PyTorch

--- a/00_PyTorch_Fundamentals.ipynb
+++ b/00_PyTorch_Fundamentals.ipynb
@@ -2143,6 +2143,113 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## GPU에서 시제와 PyTorch 개체를 실행(더빠르게 계산하기)\n",
+    "\n",
+    "GPUs = 더 빠르게 계산하기 위해 사용된다. (CUDA + NVidia 하드웨어 + Pytorch 코드 )\n",
+    "\n",
+    "### 1. Getting a GPU\n",
+    "1. Easiest way : Google Colab의  무료 GPU 사용하기 (option to upgrade as well)\n",
+    "2. Use your own GPU : 약간의 설정과 GPU 구입에 대한 투자 필요 (구글링으로 어떤 GPU를 사용할지 검색하여 deep learning 프로젝트에 적합한 GPU를 선택하여 사용) \n",
+    "    - 예 : https://www.cherryservers.com/blog/best-gpus-for-deep-learning \n",
+    "3. Use cloud computing : GCP, AWS, Azure 같은 서비스들을 사용하여 클라우드 컴픁팅 환경을 구축하여 사용\n",
+    "\n",
+    "따라서, 2, 3 PyTorch + GPU driver(CUDA)의 경우 약간의 설정이 필요하다. 이에 대해서는 PyTorch 문서를 참조하여 설정한다.\n",
+    "로컬 : https://pytorch.org/get-started/locally/\n",
+    "클라우드 파트너 : https://pytorch.org/get-started/cloud-partners/\n",
+    "\n",
+    "### GPU 종류\n",
+    "- Tesla p100\n",
+    "- Tesla k80\n",
+    "- Tesla T4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 277,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 277,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check for GPU access with Pytorch\n",
+    "import torch\n",
+    "torch.cuda.is_available()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "PyTorch는 CPU나 GPU 또 MacOS 환경의 경우 GPU가 아닌 mps에서 컴퓨팅을 수행하기 때문에 장치에 구애받지 않는 코드를 설정하는 것이 가장 좋다.\n",
+    ": https://pytorch.org/docs/stable/notes/cuda.html#device-agnostic-code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 283,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'mps'"
+      ]
+     },
+     "execution_count": 283,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Set up device agnostic code\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"mps\" if torch.backends.mps.is_available() else \"cpu\"\n",
+    "device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 282,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 282,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Count number of devices\n",
+    "torch.mps.device_count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
