Setting up Device-Agnostic Code an dputting Tensors on and off the GPU

--- a/00_PyTorch_Fundamentals.ipynb
+++ b/00_PyTorch_Fundamentals.ipynb
@@ -2244,12 +2244,107 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## 3. Putting tensors (and models) on the GPU : 텐서와 모델을 GPU에 배치하는 방법\n",
+    "\n",
+    "GPU에서 tensors/models를 원하는 이유는 더 빠르게 계산하기 위해서이다. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 285,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([1, 2, 3]) cpu\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a tensor(default on the CPU)\n",
+    "tensor = torch.tensor([1,2,3], device=\"cpu\")\n",
+    "\n",
+    "# tensor not on GPU\n",
+    "print(tensor, tensor.device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 287,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1, 2, 3], device='mps:0')"
+      ]
+     },
+     "execution_count": 287,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Move tensor to MPS (가능하면)\n",
+    "tensor_on_mps = tensor.to(device)\n",
+    "tensor_on_mps"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 4. Moving tensors back to the CPU\n",
+    "\n",
+    "NumPy는 CPU에서 작동하기 때문에 텐서를 NumPy로 변환하는 것이 좋다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 289,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can't convert mps:0 device type tensor to numpy. Use Tensor.cpu() to copy the tensor to host memory first.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[289], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# If tensor is on GPU or MPS, can't transform it to Numpy\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mtensor_on_mps\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnumpy\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: can't convert mps:0 device type tensor to numpy. Use Tensor.cpu() to copy the tensor to host memory first."
+     ]
+    }
+   ],
+   "source": [
+    "# If tensor is on GPU or MPS, can't transform it to Numpy\n",
+    "tensor_on_mps.numpy()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 291,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3])"
+      ]
+     },
+     "execution_count": 291,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# To fix th eGPU or MPS tensor with NumPy issue, we can first set it to the CPU\n",
+    "tensor_back_on_cpu = tensor_on_mps.cpu().numpy()\n",
+    "tensor_back_on_cpu"
+   ]
   }
  ],
  "metadata": {
