--- a/00_Exercises.ipynb
+++ b/00_Exercises.ipynb
@@ -361,21 +361,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[[[0.7898, 0.4503, 0.6522, 0.3794, 0.6752, 0.1378, 0.2060, 0.2462,\n",
-      "           0.9595, 0.3655]]]]) torch.Size([1, 1, 1, 10])\n",
-      "tensor([0.7898, 0.4503, 0.6522, 0.3794, 0.6752, 0.1378, 0.2060, 0.2462, 0.9595,\n",
-      "        0.3655]) torch.Size([10])\n",
-      "tensor([[[[[0.7898, 0.4503, 0.6522, 0.3794, 0.6752, 0.1378, 0.2060, 0.2462,\n",
-      "            0.9595, 0.3655]]]]]) torch.Size([1, 1, 1, 1, 10])\n",
-      "tensor([[[[[[[0.7898, 0.4503, 0.6522, 0.3794, 0.6752, 0.1378, 0.2060, 0.2462,\n",
-      "              0.9595, 0.3655]]]]]]]) torch.Size([1, 1, 1, 1, 1, 1, 10])\n"
+      "tensor([[[[0.4986, 0.2578, 0.9991, 0.9883, 0.1229, 0.0947, 0.1210, 0.4976,\n",
+      "           0.3725, 0.1727]]]]) torch.Size([1, 1, 1, 10])\n",
+      "tensor([0.4986, 0.2578, 0.9991, 0.9883, 0.1229, 0.0947, 0.1210, 0.4976, 0.3725,\n",
+      "        0.1727]) torch.Size([10])\n"
      ]
     }
    ],
@@ -389,15 +385,33 @@
     "# Remove single dimensions\n",
     "x_squeezed = x.squeeze()\n",
     "\n",
+    "\n",
+    "# Print out tensors and their shapes\n",
+    "print(x, x.shape)\n",
+    "print(x_squeezed, x_squeezed.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[[[0.4986, 0.2578, 0.9991, 0.9883, 0.1229, 0.0947, 0.1210, 0.4976,\n",
+      "            0.3725, 0.1727]]]]]) torch.Size([1, 1, 1, 1, 10])\n",
+      "tensor([[[[[[[0.4986, 0.2578, 0.9991, 0.9883, 0.1229, 0.0947, 0.1210, 0.4976,\n",
+      "              0.3725, 0.1727]]]]]]]) torch.Size([1, 1, 1, 1, 1, 1, 10])\n"
+     ]
+    }
+   ],
+   "source": [
     "x_unsqeezed = x.unsqueeze(dim=0)\n",
     "\n",
     "x_reshaped = x.reshape(1,1,1,1,1,1,10)\n",
     "\n",
-    "\n",
-    "\n",
-    "# Print out tensors and their shapes\n",
-    "print(x, x.shape)\n",
-    "print(x_squeezed, x_squeezed.shape)\n",
     "print(x_unsqeezed, x_unsqeezed.shape)\n",
     "print(x_reshaped, x_reshaped.shape)"
    ]
