--- a/01_pytorch_workflow_video.ipynb
+++ b/01_pytorch_workflow_video.ipynb
@@ -694,7 +694,6 @@
     "    # 2. Calculate the loss \n",
     "    # 모델의 예측이 얼마나 잘못되었는지에 대한 손실 값을 계산.\n",
     "    loss= loss_fn(y_preds, y_test)\n",
-    "    # print(f\"Loss: {loss}\") # 손실 값 출력\n",
     "\n",
     "    # 3. optimizer zero grad (최적화 함수 초기화) : 매 에포마다 누적되므로, 각 전방 전달마다 새로 시작하도록 0으로 설정.\n",
     "    optimizer.zero_grad()\n",
@@ -711,16 +710,19 @@
     "    # 훈련이 아닌 평가를 원한다고 모델에게 알려준다. (훈련에 사용되지만 평가에는 사용되지 않는 기능을 비활성화)\n",
     "    model_0.eval() \n",
     "\n",
-    "    # 추론을 위해 `torch.inference_mode()` 컨텍스트 관리자를 활성화하여 경사 추적과 같은 기능을 비활성화(추론에는 경사 추적이 필요하지 않다.)\n",
+    "    # 더 빠른 성능을 위한 추론 : `torch.inference_mode()` 컨텍스트 관리자를 활성화하여 경사 추적과 같은 기능을 비활성화(추론에는 경사 추적이 필요하지 않다.)\n",
     "    with torch.inference_mode():\n",
+    "\n",
     "        # 1. forward 전달\n",
-    "        test_pred = model_0(X_test) # 모델을 통해 테스트 데이터를 전달합니다(이는 모델의 구현된 `forward()` 메서드를 호출합니다)\n",
+    "        # 모델을 통해 테스트 데이터를 전달합니다(이는 모델의 구현된 `forward()` 메서드를 호출합니다)\n",
+    "        test_pred = model_0(X_test) \n",
     "\n",
     "        # 2. 손실 계산\n",
+    "        # 테스트 손실 값 계산(모델의 예측이 테스트 데이터셋에서 얼마나 잘못되었는지, 낮을수록 더 좋음)\n",
     "        test_loss = loss_fn(test_pred, y_test)\n",
-    "        # print(f\"Test loss: {test_loss}\")\n",
     "\n",
     "    # 3. 10번째 epoch마다 상태 출력\n",
+    "    # 훈련/테스트 중 모델의 진행 상황을 ~10 에포크마다 출력 (참고: 여기에 출력되는 것은 특정 문제에 맞게 조정할 수 있다.)\n",
     "    if epoch % 10 == 0:\n",
     "        epoch_count.append(epoch)\n",
     "        loss_values.append(loss)\n",
@@ -833,6 +835,250 @@
    "outputs": [],
    "source": [
     "weight, bias"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PyTorch에서 모델 저장하기\n",
+    "\n",
+    "PyTorch에서 모델을 저장하고 로드하는 데 사용하는 세 가지 주요 메서드가 있다.\n",
+    "\n",
+    "1. `torch.save()` - Python의 **pickle** 형식으로 PyTorch 객체를 저장\n",
+    "2. `torch.load()` - 저장된 PyTorch 객체를 로드\n",
+    "3. `torch.nn.Module.load_state_dict()` - 이 메서드를 사용하여 모델의 저장된 상태 사전을 로드.\n",
+    "\n",
+    "PyTorch save & load code tutorial + extra-curriculum: https://pytorch.org/tutorials/beginner/saving_loading_models.html#saving-loading-model-for-inference\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Saving model to : models/01_pytorch_workflow_model_0.pth\n",
+      "<bound method Module.state_dict of LinearRegressionModel()>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Saving our PyTorch model\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# 1. Create models directory\n",
+    "MODEL_PATH = Path(\"models\")\n",
+    "MODEL_PATH.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "# 2. Create model save path\n",
+    "MODEL_NAME = \"01_pytorch_workflow_model_0.pth\"\n",
+    "MODEL_SAVE_PATH = MODEL_PATH / MODEL_NAME\n",
+    "print(f\" Saving model to : {MODEL_SAVE_PATH}\")\n",
+    "torch.save(obj=model_0.state_dict(),\n",
+    "           f=MODEL_SAVE_PATH)\n",
+    "\n",
+    "# 3. Saving the model state dict\n",
+    "print((model_0.state_dict)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 8\n",
+      "-rw-r--r--@ 1 ruahkim  staff  1680 Jan 18 16:54 01_pytorch_workflow_model_0.pth\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls -l models/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OrderedDict([('weights', tensor([0.6117])), ('bias', tensor([0.3688]))])"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_0.state_dict()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PyTorch 모델 로드하기\n",
+    " \n",
+    "모델의 `state_dict()`를 저장했기 때문에, 모델 클래스의 새로운 인스턴스를 생성하고 저장된 `state_dict()` 정보를 로드한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/dt/dsq7jdxd2kb07j1llwz_5dmr0000gn/T/ipykernel_82277/861577324.py:5: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  loaded_model_0.load_state_dict(torch.load(f=MODEL_SAVE_PATH))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 저장된 state_dict()를 로드하려면 모델 클래스의 새 인스턴스를 생성해야 합니다.\n",
+    "loaded_model_0 = LinearRegressionModel()\n",
+    "\n",
+    "# 저장된 model_0의 state_dict를 로드합니다 (이렇게 하면 새로운 인스턴스가 업데이트된 매개변수로 업데이트됩니다)\n",
+    "loaded_model_0.load_state_dict(torch.load(f=MODEL_SAVE_PATH))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OrderedDict([('weights', tensor([0.6117])), ('bias', tensor([0.3688]))])"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loaded_model_0.state_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.8582],\n",
+       "        [0.8704],\n",
+       "        [0.8827],\n",
+       "        [0.8949],\n",
+       "        [0.9071],\n",
+       "        [0.9194],\n",
+       "        [0.9316],\n",
+       "        [0.9438],\n",
+       "        [0.9561],\n",
+       "        [0.9683]])"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Make some predictions with our loaded model\n",
+    "loaded_model_0.eval()\n",
+    "with torch.inference_mode():\n",
+    "    loaded_model_preds = loaded_model_0(X_test)\n",
+    "\n",
+    "loaded_model_preds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.8582],\n",
+       "        [0.8704],\n",
+       "        [0.8827],\n",
+       "        [0.8949],\n",
+       "        [0.9071],\n",
+       "        [0.9194],\n",
+       "        [0.9316],\n",
+       "        [0.9438],\n",
+       "        [0.9561],\n",
+       "        [0.9683]])"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Make some models preds\n",
+    "model_0.eval()\n",
+    "with torch.inference_mode():\n",
+    "    y_preds = model_0(X_test)\n",
+    "y_preds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[True],\n",
+       "        [True],\n",
+       "        [True],\n",
+       "        [True],\n",
+       "        [True],\n",
+       "        [True],\n",
+       "        [True],\n",
+       "        [True],\n",
+       "        [True],\n",
+       "        [True]])"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Compare loaded model preds with original model preds\n",
+    "y_preds == loaded_model_preds\n"
    ]
   },
   {
